Finished Basic Styling

--- a/index.html
+++ b/index.html
@@ -37,78 +37,106 @@
     </nav>
   </header>
 
-  <aside>
+  <aside class="sidebar p-3">
     <ul class="admin-sidebar">
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Admin Dashboard</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Add User</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Attendance Setting</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Holiday List</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Swift Master (Roaster Timing)</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Division List</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Designation List</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Employee Details</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Employee Wages</div>
       </li>
     </ul>
     <ul class="public-sidebar d-none">
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Dashboard</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Emp Alteration</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Attendance Log Entry</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Salary Preparation</div>
       </li>
       <li>
-        <div class="side-icon"></div>
+        <div class="side-icon">
+          <i class="fa-solid fa-chart-pie"></i>
+        </div>
         <div class="side-title">Final Salary</div>
       </li>
     </ul>
   </aside>
 
-  <main>
-    <h1>Main Dashboard Area</h1>
+  <main class="main">
+    <h2>Main Dashboard Area</h2>
   </main>
 
-  <footer>
+  <footer class="d-flex">
     <div class="log-out">
       <a href="#">Log Out</a>
     </div>
-    <div class="rights">
+    <div class="rights ml-auto mr-3">
       <span>Pay Roll | </span>
       <span>Designed and Developed by 
         <a href="#">CubeTen</a>
