Added admin & default html

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
   
   <header>
     <nav class=" d-flex align-items-center">
-      <div class="nav-header nav-brand p-3 d-flex align-items-center">
+      <div class="nav-header p-3 d-flex align-items-center">
         <h1>Admin Dashboard</h1>
         <div class="nav-menu ml-auto">
           <i class="fa-solid fa-bars"></i>
@@ -38,7 +38,7 @@
   </header>
 
   <aside class="sidebar p-3">
-    <ul class="admin-sidebar">
+    <ul>
       <li>
         <div class="side-icon">
           <i class="fa-solid fa-chart-pie"></i>
@@ -92,38 +92,6 @@
           <i class="fa-solid fa-chart-pie"></i>
         </div>
         <div class="side-title">Employee Wages</div>
-      </li>
-    </ul>
-    <ul class="public-sidebar d-none">
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Dashboard</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Emp Alteration</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Attendance Log Entry</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Salary Preparation</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Final Salary</div>
       </li>
     </ul>
   </aside>
