--- a/default.html
+++ b/default.html
@@ -19,8 +19,8 @@
   
   <header>
     <nav class=" d-flex align-items-center">
-      <div class="nav-header nav-brand p-3 d-flex align-items-center">
-        <h1>Admin Dashboard</h1>
+      <div class="nav-header p-3 d-flex align-items-center">
+        <h1>Dashboard</h1>
         <div class="nav-menu ml-auto">
           <i class="fa-solid fa-bars"></i>
         </div>
@@ -38,63 +38,7 @@
   </header>
 
   <aside class="sidebar p-3">
-    <ul class="admin-sidebar">
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Admin Dashboard</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Add User</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Attendance Setting</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Holiday List</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Swift Master (Roaster Timing)</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Division List</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Designation List</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Employee Details</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Employee Wages</div>
-      </li>
-    </ul>
-    <ul class="public-sidebar d-none">
+    <ul>
       <li>
         <div class="side-icon">
           <i class="fa-solid fa-chart-pie"></i>
