Added Sidebar Admin Icons

--- a/index.html
+++ b/index.html
@@ -41,57 +41,45 @@
     <ul class="admin-sidebar">
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Admin_Dashboard.svg" alt="Admin Dashboard">
         </div>
         <div class="side-title">Admin Dashboard</div>
       </li>
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Add_User.svg" alt="Add User">
         </div>
         <div class="side-title">Add User</div>
       </li>
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Attendance_Setting.svg" alt="Attendance Setting">
         </div>
         <div class="side-title">Attendance Setting</div>
       </li>
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Holiday List.svg" alt="Holiday List">
         </div>
         <div class="side-title">Holiday List</div>
       </li>
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Swift Master (Roaster Timing)</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Division_List_1.svg" alt="Division List">
         </div>
         <div class="side-title">Division List</div>
       </li>
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Designation_List.svg" alt="Designation List">
         </div>
         <div class="side-title">Designation List</div>
       </li>
       <li>
         <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
+          <img src="./Employee_Details.svg" alt="Employeee Details">
         </div>
         <div class="side-title">Employee Details</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Employee Wages</div>
       </li>
     </ul>
     <ul class="public-sidebar d-none">
