--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Payroll Pay">
   <title>Pay Roll Website</title>
   <!-- Bootstrap 4 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Custom Stylesheet -->
@@ -18,7 +18,69 @@
 <body>
   
   <header>
-    <nav class=" d-flex align-items-center">
+    <nav class="navbar navbar-dark ">
+      <a class="navbar-brand" href="#">Admin Dashboard</a>
+      <div class="nav-user d-flex align-items-center text-light ml-sm-auto mr-1 mr-md-3">
+        <div class="user-icon">
+          <img src="./user.png" alt="User Icon">
+        </div>
+        <div class="drop-down">
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+        <div class="user-id d-none d-md-block">Haobijam Chetan Singh</div>
+      </div>
+      <button class="navbar-toggler mr-3" id="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav py-3">
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Admin_Dashboard.svg" alt="Admin Dashboard">
+            </div>
+            <a class="nav-link active" href="#">Admin Dashboard</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Add_User.svg" alt="Add User">
+            </div>
+            <a class="nav-link" href="#">Add User</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Attendance_Setting.svg" alt="Attendance Setting">
+            </div>
+            <a class="nav-link" href="#">Attendance Setting</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Holiday List.svg" alt="Holiday List">
+            </div>
+            <a class="nav-link" href="#">Holiday List</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Division_List.svg" alt="Division List">
+            </div>
+            <a class="nav-link" href="#">Division List</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Designation_List.svg" alt="Designation List">
+            </div>
+            <a class="nav-link" href="#">Designation List</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Employee_Details.svg" alt="Employee Details">
+            </div>
+            <a class="nav-link" href="#">Employee Details</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- <nav class="nav d-flex align-items-center">
       <div class="nav-header nav-brand p-3 d-flex align-items-center">
         <h1>Admin Dashboard</h1>
         <div class="nav-menu ml-auto">
@@ -27,94 +89,15 @@
       </div>
       <ul class="nav-items d-flex align-items-center ml-auto mr-3">
         <li class="user-icon">
-          <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="Men 11 Portrait" class="rounded-circle">
+          <img src="./user.png" alt="User Avatar" class="rounded-circle">
         </li>
         <li class="drop-down">
           <i class="fa-solid fa-chevron-down"></i>
         </li>
         <li class="user-id">Haobijam Chetan Singh</li>
       </ul>
-    </nav>
+    </nav> -->
   </header>
-
-  <aside class="sidebar p-3">
-    <ul class="admin-sidebar">
-      <li>
-        <div class="side-icon">
-          <img src="./Admin_Dashboard.svg" alt="Admin Dashboard">
-        </div>
-        <div class="side-title">Admin Dashboard</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <img src="./Add_User.svg" alt="Add User">
-        </div>
-        <div class="side-title">Add User</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <img src="./Attendance_Setting.svg" alt="Attendance Setting">
-        </div>
-        <div class="side-title">Attendance Setting</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <img src="./Holiday List.svg" alt="Holiday List">
-        </div>
-        <div class="side-title">Holiday List</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <img src="./Division_List_1.svg" alt="Division List">
-        </div>
-        <div class="side-title">Division List</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <img src="./Designation_List.svg" alt="Designation List">
-        </div>
-        <div class="side-title">Designation List</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <img src="./Employee_Details.svg" alt="Employeee Details">
-        </div>
-        <div class="side-title">Employee Details</div>
-      </li>
-    </ul>
-    <ul class="public-sidebar d-none">
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Dashboard</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Emp Alteration</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Attendance Log Entry</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Salary Preparation</div>
-      </li>
-      <li>
-        <div class="side-icon">
-          <i class="fa-solid fa-chart-pie"></i>
-        </div>
-        <div class="side-title">Final Salary</div>
-      </li>
-    </ul>
-  </aside>
 
   <main class="main">
     <h2>Main Dashboard Area</h2>
@@ -127,7 +110,7 @@
     <div class="rights ml-auto mr-3">
       <span>Pay Roll | </span>
       <span>Designed and Developed by 
-        <a href="#">CubeTen</a>
+        <a href="https://www.cubeten.com">CubeTen</a>
       </span>
     </div>
   </footer>
