--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   
   <header>
-    <nav class="navbar navbar-dark ">
+    <nav class="navbar navbar-dark fixed-top">
       <a class="navbar-brand" href="#">Admin Dashboard</a>
       <div class="nav-user d-flex align-items-center text-light ml-sm-auto mr-1 mr-md-3">
         <div class="user-icon">
@@ -80,23 +80,6 @@
         </ul>
       </div>
     </nav>
-    <!-- <nav class="nav d-flex align-items-center">
-      <div class="nav-header nav-brand p-3 d-flex align-items-center">
-        <h1>Admin Dashboard</h1>
-        <div class="nav-menu ml-auto">
-          <i class="fa-solid fa-bars"></i>
-        </div>
-      </div>
-      <ul class="nav-items d-flex align-items-center ml-auto mr-3">
-        <li class="user-icon">
-          <img src="./user.png" alt="User Avatar" class="rounded-circle">
-        </li>
-        <li class="drop-down">
-          <i class="fa-solid fa-chevron-down"></i>
-        </li>
-        <li class="user-id">Haobijam Chetan Singh</li>
-      </ul>
-    </nav> -->
   </header>
 
   <main class="main">
