--- a/old_index.html
+++ b/old_index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Payroll Pay">
   <title>Pay Roll Website</title>
   <!-- Bootstrap 4 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Custom Stylesheet -->
@@ -37,40 +37,45 @@
         <ul class="navbar-nav py-3">
           <li class="nav-item d-flex align-items-center ml-4 py-1">
             <div class="nav-icon">
-              <img src="./Public_Dashboard.svg" alt="Public Dashboard">
+              <img src="./Admin_Dashboard.svg" alt="Admin Dashboard">
             </div>
-            <a class="nav-link active" href="#">Dashboard</a>
+            <a class="nav-link active" href="#">Admin Dashboard</a>
           </li>
           <li class="nav-item d-flex align-items-center ml-4 py-1">
             <div class="nav-icon">
-              <img src="./Employee_Alteration.svg" alt="Employee Alteration">
+              <img src="./Add_User.svg" alt="Add User">
             </div>
-            <a class="nav-link" href="#">Employee Alteration</a>
+            <a class="nav-link" href="#">Add User</a>
           </li>
           <li class="nav-item d-flex align-items-center ml-4 py-1">
             <div class="nav-icon">
-              <img src="./Salary_Preparation.svg" alt="Salary Preparation">
+              <img src="./Attendance_Setting.svg" alt="Attendance Setting">
             </div>
-            <a class="nav-link" href="#">Salary Preparation</a>
+            <a class="nav-link" href="#">Attendance Setting</a>
           </li>
           <li class="nav-item d-flex align-items-center ml-4 py-1">
             <div class="nav-icon">
-              <img src="./Final_Salary.svg" alt="Final Salary">
+              <img src="./Holiday List.svg" alt="Holiday List">
             </div>
-            <a class="nav-link" href="#">Final Salary</a>
-          </li>
-          <h2 class="ml-3 text-light">Salary Report</h2>
-          <li class="nav-item d-flex align-items-center ml-4 py-1">
-            <div class="nav-icon">
-              <img src="./Monthly_Salary.svg" alt="Monthly Salary">
-            </div>
-            <a class="nav-link" href="#">Monthly Salary</a>
+            <a class="nav-link" href="#">Holiday List</a>
           </li>
           <li class="nav-item d-flex align-items-center ml-4 py-1">
             <div class="nav-icon">
-              <img src="./Payslip.svg" alt="Payslip">
+              <img src="./Division_List.svg" alt="Division List">
             </div>
-            <a class="nav-link" href="#">Payslip</a>
+            <a class="nav-link" href="#">Division List</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Designation_List.svg" alt="Designation List">
+            </div>
+            <a class="nav-link" href="#">Designation List</a>
+          </li>
+          <li class="nav-item d-flex align-items-center ml-4 py-1">
+            <div class="nav-icon">
+              <img src="./Employee_Details.svg" alt="Employee Details">
+            </div>
+            <a class="nav-link" href="#">Employee Details</a>
           </li>
         </ul>
       </div>
@@ -88,7 +93,7 @@
     <div class="rights ml-auto mr-3">
       <span>Pay Roll | </span>
       <span>Designed and Developed by 
-        <a href="#">CubeTen</a>
+        <a href="https://www.cubeten.com">CubeTen</a>
       </span>
     </div>
   </footer>
