--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       <div class="col-md-6 d-none d-md-block gray-background">
         <img src="./salary.png" alt="Salary Illustration" class="img-fluid">
       </div>
-      <div class="col-md-6 bg-light py-4 ps-5 login">
+      <div class="col-md-6 bg-light login">
         <div class="row">
           <div class="col fw-bolder">
             <img src="./cubeten.png" alt="Cubeten Logo" class="img-fluid cubeten">
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 d-flex my-3 justify-content-center">
+          <div class="col-12 d-flex my-3 justify-content-center title">
             <img src="./payroll.png" alt="Payroll Logo" class="payroll img-fluid">
             <h1 class="lobster-header ms-4">Payroll</h1>
           </div>
